<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="17dp"
        android:src="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/tvDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="203dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:text="@string/year_load"
        android:layout_marginTop="56dp"
        android:ellipsize="end"
        android:fontFamily="@font/sf"
        android:gravity="start"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        tools:text="@string/year" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:ellipsize="end"
        android:fontFamily="@font/sf"
        android:gravity="center|start"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/title_load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="205dp"
        android:text="@string/genre_load"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/sf"
        android:gravity="start"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tvYear"
        app:layout_constraintVertical_bias="0.21"
        tools:text="@string/genre" />

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="342dp"
        android:layout_height="283dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/sf"
        android:gravity="start"
        android:text="@string/detail"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYear"
        app:layout_constraintVertical_bias="0.005"
        tools:text="@string/detail" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>